container and header spacing fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,36 +15,36 @@ html {
 body {
     font-family: 'Orbitron', sans-serif;
     background-color: #000;
-    margin-top: 5rem;
 }
 
 .container {
-    max-width: 45rem;
-    height: 65rem;
+    max-width: 100vw;
+    height: 100vh;
     margin: auto;
     border: 2px solid yellow;
     background-color: #000;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
 
     .header {
         width: 100%;
-        // height: 13rem;
-        object-fit: contain;
-        object-position: 100% -1rem;
+        height: 10rem;
+        object-fit: cover;
+        /* margin-bottom: -4rem; */
+        object-position: 0 25%;
     }
 
     .image-container {
         height: 35rem;
         border: 2px solid #d470d9;
         border-radius: 2.5rem 2.5rem 0 0;
-        margin-left: 4rem;
-        margin-right: 4rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
         display: flex;
         justify-content: center;
         align-items: center;
         position: relative;
-        top: -5.75rem;
 
         .menu-icon {
             width: 5.5rem;
@@ -68,14 +68,13 @@ body {
         color: #3dc185;
         height: 7rem;
         font-size: 6rem;
-        font-size: 4.7vw; //14vw, phone 8.5vw ipad, 5.2vh laptop, 4.7vw big
+        font-size: 16vw; //14vw, phone 8.5vw ipad, 5.2vh laptop, 4.7vw big
         border: 2px solid red;
-        margin-left: 4rem;
-        margin-right: 4rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-top: -57px;
     }
 
     .controls {
@@ -83,8 +82,8 @@ body {
         font-size: 3rem;
         border: 2px solid orange;
         height: 7rem;
-        margin-left: 4rem;
-        margin-right: 4rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
         display: flex;
         justify-content: space-between;
         align-items: center;
